# open_effective_project

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: cjm_mappings.py  config.py  db.py  demo_auth.py  enums.py
backend/app/models/: __init__.py  action_plan.py  ai.py  base.py  cjm.py  lpr.py  project.py  project_context.py  survey.py
backend/app/repositories/: __init__.py  cjm_read.py  cjm_update.py
backend/app/schemas/: action_plan.py  ai.py  cjm.py  lpr.py  project.py  survey.py
backend/app/services/: cjm_read.py  cjm_update.py  project_context.py  project_context_templates.py
backend/data/templates/: cjm_mvp_collection_template.xlsx
backend/docs/: cjm_excel_template_spec.md  cjm_import_process.md  cjm_mvp_data_dictionary.md
backend/migrations/: env.py
backend/migrations/versions/: 20260522_0001_initial_mvp_schema.py  20260522_0002_allow_unknown_expectation_explicitness.py  20260522_0003_add_cjm_external_ids.py  20260522_0004_add_cjm_text_kpi_links.py  20260522_0005_add_cjm_readback_source_ids.py  20260522_0006_complete_cjm_mvp_v6_fields.py  20260524_0007_add_manual_update_markers.py  20260525_0008_web_first_context_and_archive.py  20260526_0009_normalize_project_context.py  20260526_0010_single_project_code.py  (+1 more)
backend/scripts/: check_cjm_project.py  generate_cjm_mvp_template.py  import_cjm_mvp_excel.py
backend/tests/: test_cjm_manual_import.py  test_cjm_read_api.py  test_demo_auth.py  test_health.py
(+35 files in other folders)
